--- a/ProgressQuest Client/ProgressQuest Client.csproj
+++ b/ProgressQuest Client/ProgressQuest Client.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{38D8BB9C-3544-4D2A-8C35-C2DAA7712CD6}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>ProgressQuest_Client</RootNamespace>
     <AssemblyName>ProgressQuest Client</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
